# aarch64-decompiler

./: CMakeLists.txt  ControlFlowGraph.h  Elf.cpp  Elf.h  ElfHeader.h  ElfLoader.cpp  ElfLoader.h  ElfParser.h  ElfSection.h  FileLoader.h  README.md  cfg.cpp  cfg.h  main.cpp
examples/: a.c  colatz  demo  test  test-fail  test.c
include/decompiler/: BasicIR.cpp  BasicIR.h  CFG.cpp  CFG.h  Capstone.cpp  Capstone.h  Elf.cpp  Elf.h  File.cpp  File.h  SSA.cpp  SSA.h  main.cpp
